# portfolio_dashboard

./: .gitignore  README.md  app.py  investment_strategies.ipynb  pyproject.toml
notebooks/: investment_strategies.ipynb  monte_carlo.ipynb
src/pages/ai/: __init__.py
src/pages/comp_ind_strat/: __init__.py  cumulative_returns.py  long_term.py  market.py
src/pages/comp_inv_strat/: __init__.py  long_term.py
src/pages/comparing_investment_strategies/: __init__.py  cumulative_returns.py  market.py
src/pages/core_portfolios/: __init__.py
src/services/: data.py  monte_carlo.py  scraper.py  strategy.py
