[project]
name = "syfe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "plotly>=5.24.1",
    "pybacktest>=1.1.8",
    "pyportfolioopt>=1.5.6",
    "streamlit>=1.44.1",
    "yfinance>=0.2.55",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]
